--- a/FaceRec-iOS/FaceRec-iOS-Info.plist
+++ b/FaceRec-iOS/FaceRec-iOS-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIMainStoryboardFile</key>
-	<string>iPhone_Storyboard</string>
+	<string>iPhone_LoginStoryboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
